// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with "sourceMap" option should work and emit warning on valid sourcemap and minimizer error: errors 1`] = `
[
  "Error: broken-source-map.css from Css Minimizer plugin
error-plugin: /broken-source-map.css:1:7: Postcss error [test:1,5][broken-source-map.css:1,7]",
  "Error: dist/entry2.css from Css Minimizer plugin
error-plugin: /dist/entry2.css:10:3: Postcss error [webpack://./sourcemap/foo.css:8,2][dist/entry2.css:10,3]",
]
`;

exports[`when applied with "sourceMap" option should work and emit warning on valid sourcemap and minimizer error: warnings 1`] = `[]`;

exports[`when applied with "sourceMap" option should work and emit warnings on broken sourcemaps: assets 1`] = `
{
  "broken-source-map.css": ".bar{color:red};",
  "dist/entry2.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry2.css.map*/",
  "dist/entry2.css.map": {
    "version": 3,
    "file": "dist/entry2.css",
    "mappings": "AAAA,KCGE,SAAU,CDFV,eCCF,CAIA,OACE,iBAGF",
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.css"
    ],
    "sourcesContent": [
        "body {\\r\\n  font-weight: bold;\\r\\n}",
        "@import 'bar';\\r\\n\\r\\nbody {\\r\\n  color: red;\\r\\n}\\r\\n\\r\\nbody a {\\r\\n  text-align: center;\\r\\n}"
    ],
    "names": [],
    "sourceRoot": ""
},
}
`;

exports[`when applied with "sourceMap" option should work and emit warnings on broken sourcemaps: errors 1`] = `[]`;

exports[`when applied with "sourceMap" option should work and emit warnings on broken sourcemaps: warnings 1`] = `
[
  "Error: broken-source-map.css contains invalid source map",
]
`;

exports[`when applied with "sourceMap" option should work with SourceMapDevToolPlugin plugin): assets 1`] = `
{
  "dist/entry.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=https://example.com/project/sourcemaps/entry.css.map*/",
  "dist/entry2.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=https://example.com/project/sourcemaps/entry2.css.map*/",
  "sourcemaps/entry.css.map": {
    "version": 3,
    "file": "dist/entry.css",
    "mappings": "AAAA,KCGE,SAAU,CDFV,eCCF,CAEE,OACE,iBAIJ",
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.scss"
    ],
    "sourcesContent": [
        "body {\\r\\n  font-weight: bold;\\r\\n}",
        "@import 'bar';\\r\\n\\r\\nbody {\\r\\n  color: red;\\r\\n  a {\\r\\n    text-align: center;\\r\\n  }\\r\\n}"
    ],
    "names": [],
    "sourceRoot": ""
},
  "sourcemaps/entry2.css.map": {
    "version": 3,
    "file": "dist/entry2.css",
    "mappings": "AAAA,KCGE,SAAU,CDFV,eCCF,CAIA,OACE,iBAGF",
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.css"
    ],
    "sourcesContent": [
        "body {\\r\\n  font-weight: bold;\\r\\n}",
        "@import 'bar';\\r\\n\\r\\nbody {\\r\\n  color: red;\\r\\n}\\r\\n\\r\\nbody a {\\r\\n  text-align: center;\\r\\n}"
    ],
    "names": [],
    "sourceRoot": ""
},
}
`;

exports[`when applied with "sourceMap" option should work with SourceMapDevToolPlugin plugin): errors 1`] = `[]`;

exports[`when applied with "sourceMap" option should work with SourceMapDevToolPlugin plugin): warnings 1`] = `[]`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "false" value: assets 1`] = `
{
  "entry.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry.css.map*/",
  "entry.css.map": {
    "version": 3,
    "file": "entry.css",
    "mappings": "AAAA,KCGE,SAAU,CDFV,eCCF,CAEE,OACE,iBAIJ",
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.scss"
    ],
    "sourcesContent": [
        "body {\\r\\n  font-weight: bold;\\r\\n}",
        "@import 'bar';\\r\\n\\r\\nbody {\\r\\n  color: red;\\r\\n  a {\\r\\n    text-align: center;\\r\\n  }\\r\\n}"
    ],
    "names": [],
    "sourceRoot": ""
},
  "entry2.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry2.css.map*/",
  "entry2.css.map": {
    "version": 3,
    "file": "entry2.css",
    "mappings": "AAAA,KCGE,SAAU,CDFV,eCCF,CAIA,OACE,iBAGF",
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.css"
    ],
    "sourcesContent": [
        "body {\\r\\n  font-weight: bold;\\r\\n}",
        "@import 'bar';\\r\\n\\r\\nbody {\\r\\n  color: red;\\r\\n}\\r\\n\\r\\nbody a {\\r\\n  text-align: center;\\r\\n}"
    ],
    "names": [],
    "sourceRoot": ""
},
}
`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "false" value: errors 1`] = `[]`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "false" value: warnings 1`] = `[]`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "true" value: assets 1`] = `
{
  "entry.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry.css.map*/",
  "entry.css.map": {
    "version": 3,
    "file": "entry.css",
    "mappings": "AAAA,KCGE,SAAU,CDFV,eCCF,CAEE,OACE,iBAIJ",
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.scss"
    ],
    "sourcesContent": [
        "body {\\r\\n  font-weight: bold;\\r\\n}",
        "@import 'bar';\\r\\n\\r\\nbody {\\r\\n  color: red;\\r\\n  a {\\r\\n    text-align: center;\\r\\n  }\\r\\n}"
    ],
    "names": [],
    "sourceRoot": ""
},
  "entry2.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry2.css.map*/",
  "entry2.css.map": {
    "version": 3,
    "file": "entry2.css",
    "mappings": "AAAA,KCGE,SAAU,CDFV,eCCF,CAIA,OACE,iBAGF",
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.css"
    ],
    "sourcesContent": [
        "body {\\r\\n  font-weight: bold;\\r\\n}",
        "@import 'bar';\\r\\n\\r\\nbody {\\r\\n  color: red;\\r\\n}\\r\\n\\r\\nbody a {\\r\\n  text-align: center;\\r\\n}"
    ],
    "names": [],
    "sourceRoot": ""
},
}
`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "true" value: errors 1`] = `[]`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "true" value: warnings 1`] = `[]`;

exports[`when applied with "sourceMap" option should work with the "devtool" option: assets 1`] = `
{
  "entry.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry.css.map*/",
  "entry.css.map": {
    "version": 3,
    "file": "entry.css",
    "mappings": "AAAA,KCGE,SAAU,CDFV,eCCF,CAEE,OACE,iBAIJ",
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.scss"
    ],
    "sourcesContent": [
        "body {\\r\\n  font-weight: bold;\\r\\n}",
        "@import 'bar';\\r\\n\\r\\nbody {\\r\\n  color: red;\\r\\n  a {\\r\\n    text-align: center;\\r\\n  }\\r\\n}"
    ],
    "names": [],
    "sourceRoot": ""
},
  "entry2.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry2.css.map*/",
  "entry2.css.map": {
    "version": 3,
    "file": "entry2.css",
    "mappings": "AAAA,KCGE,SAAU,CDFV,eCCF,CAIA,OACE,iBAGF",
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.css"
    ],
    "sourcesContent": [
        "body {\\r\\n  font-weight: bold;\\r\\n}",
        "@import 'bar';\\r\\n\\r\\nbody {\\r\\n  color: red;\\r\\n}\\r\\n\\r\\nbody a {\\r\\n  text-align: center;\\r\\n}"
    ],
    "names": [],
    "sourceRoot": ""
},
}
`;

exports[`when applied with "sourceMap" option should work with the "devtool" option: errors 1`] = `[]`;

exports[`when applied with "sourceMap" option should work with the "devtool" option: warnings 1`] = `[]`;
